2000-09-13  Radek Doulik  <rodo@helixcode.com>

	* htmlengine.c (html_engine_set_arg): configure pspell to use utf8
	encoding

	* htmltext.c: use unicode_offset_to_index and
	unicode_index_to_offset everywhere
	(convert_nbsp): updated to support utf8

	* htmlgdkpainter.c (utf8_gdk_text_width): last argument changed to
	len and bytes are calculated using unicode_offset_to_index
	(utf8_gdk_draw_text): likewise

2000-09-12  Radek Doulik  <rodo@helixcode.com>

	* htmltextslave.c (draw_spell_errors): use HTMLSpellErrorColor

	* htmlengine.c (html_engine_set_arg): moved spell initialization
	here

	* htmlclueflow.c (html_clueflow_spell_check): do live spell
	checking only if enabled in properties

	* gtkhtml.c: added support for spell checking properties
	(init_properties_widget): new helper function

	* gtkhtml-properties.h: added spell properties

	* htmlcolorset.h (_HTMLColorId): added HTMLSpellErrorColor

	* htmltextslave.c (draw_spell_errors): use HTMLSpellErrorColor

2000-09-08  Radek Doulik  <rodo@helixcode.com>

	* testgtkhtml.c (print_preview_cb): add footer printing (- page number -)
	(print_footer): footer printing

	* htmltextslave.c (fit_line): add cast to make compiler happy

	* htmlprinter.c (do_rectangle): refactored, split to do_rectangle
	and prepare_rectangle
	(prepare_rectangle): new helper function, also do coordinates
	conversions here
	(set_clip_rectangle): implemented this method, also use
	prepare_rectangle

	* htmlobject.c (check_page_split): return 0 instead of y as we
	don't want include this object in upcoming page (it doesn't fit
	there - this is the reason it was called)

	* htmliframe.c (check_page_split): forward to Engine::clue

	* htmlclueflow.c (check_page_split): removed, no more needed

	* htmlclue.c (check_page_split): moved here from ClueV + updated

	* htmlprinter.c (html_printer_scale_to_gnome_print): exported this
	function for engine
	(html_printer_coordinates_to_gnome_print): likewise
